# mlops-equipo-50

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.dvc/: config
data/interim/: bike_sharing_cleaned.csv.dvc  bike_sharing_eda.csv.dvc
mlops_equipo_50/: __init__.py  dataset.py  features.py  plots.py
mlops_equipo_50/modeling/: predict.py  train.py
notebooks/: EDA.ipynb  bike_sharing_ml_project.ipynb  cs-eda-exploracion-inicial.ipynb  cs-ml-inicial.ipynb
src/: __init__.py  __main__.py  config.py  dataset.py  plots.py  utils.py
src/data/: cleaning.py  make_dataset.py
src/modeling/: predict.py  train.py
