[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mlops_equipo_50"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Equipo 50" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["mlops_equipo_50"]
include = ["pyproject.toml", "mlops_equipo_50/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["mlops_equipo_50"]
force-sort-within-sections = true

